2009-05-09 Holger Vogt
 * graf.c: graphics scaling during iplot mad ea little more 
   convenient

2009-05-06 Holger Vogt
 * pp_lst.c:428 malloc(len+1) +1 added (bug report 2787072) 
   configure.in:803, 958 (bug reports 1834772, 2787076 and 2787079)

2009-05-02 Holger Vogt
 *  new flag NGDEBUG
   main.c, signal_handler.c, visualc/vngspice.vcproj:
   restore SIGSEGV signal handling for error message after seg fault
   (not in debug mode, now only for Windows)
   dctrcurv.c: winmessage about dc
   
2009-05-01 Holger Vogt
 * cktdojob.c, cktsopt.c: moved to cktsopt.c:
   maxord set to min 2 or max 6
  
2009-04-28 Holger Vogt
 * winmain.c, inp.c, cktop.c: SetAnalyse() modified/added
   cktdojob.c: maxord set to minimum 2 (prevent crash in dctran.c:774) 

2009-04-26 Dietmar Warning
 * devices/cktinit.c: prototype load_alldevs not needed
 * ngspice.h: float.h before defines.h, some more function mapping in _MSC_VER section

2009-04-26 Dietmar Warning
 * measure.c, inpcom.c: winmessage only for windows
 * misc/util.c, tilde.c, math/poly/ployfit.c: relay to ngspice.h
 * main.c, tclspice.c, misc/mktemp.c, misc/string.c: don't need include string.h because
   it comes from central place ngspice.h

2009-04-26 Holger Vogt
 * xpressn.c:400 Suppress message "cannot redefine"

2009-04-25 Holger Vogt
 * configure.in, visualc/include/config.h: NGSPICEDATADIR set to $dprefix/share/ngspice

2009-04-23 Holger Vogt
 * measure.c, inpcom.c, : winmessage() header added

============================ Rework-19 ==================================
2009-04-23 Holger Vogt
 * measure.c: .measure broken for trig, targ

2009-04-22 Holger Vogt
 * bsim4v2init.c, bsim4v3init.c: CIDER added
   
2009-04-22 Holger Vogt
 * inpcom.c measure.c mystring.c alloc.c: show Windows error 
   message before exiting

2009-04-21 Dietmar Warning
 * devices/bsim4/*.c, /vbic/*.c: Parameter declaration in function header
 
2009-04-20 Holger Vogt
 * src/spice.def: for creating dll