@@ -1,3 +1,6 @@
+2009-05-10 Holger Vogt
+ * subckt.c:1348 find last dot, not first dot in model_name
+
 2009-05-09 Holger Vogt
  * graf.c: graphics scaling during iplot mad ea little more 
    convenient
